apps/pi-hole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pi-hole
  labels:
    app: pi-hole
