apps/pi-hole/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: server
  namespace: pi-hole
spec:
  replicas: 1
  serviceName: pi-hole
  selector:
    matchLabels:
      app: pi-hole
  template:
    metadata:
      labels:
        app: pi-hole
    spec:
      hostNetwork: true
      containers:
        - name: server
          image: pihole/pihole:2026.07.2
          ports:
            - name: dns-tcp
              containerPort: 53
              hostPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              hostPort: 53
              protocol: UDP
            - name: http
              containerPort: 10080
              hostPort: 10080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /admin
              port: 10080
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /etc/pihole
              name: pi-hole-etc
            - mountPath: /etc/dnsmasq.d
              name: dnsmasq
      volumes:
        - name: pi-hole-etc
          persistentVolumeClaim:
            claimName: pi-hole-etc
        - name: dnsmasq
          emptyDir: {}
