apps/pi-hole/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: pi-hole
spec:
  selector:
    app: pi-hole
  ports:
    - name: http
      protocol: TCP
      port: 10080
      targetPort: http
