apps/pi-hole/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: pi-hole
spec:
  selector:
    app: pi-hole
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: dns-tcp
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: dns-udp
