apps/pi-hole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
  namespace: pi-hole
spec:
  selector:
    app: pi-hole
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
