apps/pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: pi-hole
  labels:
    app: pi-hole
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.berlin.bruegner.com
    http:
      paths:
      - backend:
          service:
            name: admin
            port:
              number: 10080
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - pihole.berlin.bruegner.com
      secretName: pi-hole-tls
